cmake_minimum_required(VERSION 3.0)
set(CMAKE_BUILD_TYPE RelWithDebInfo CACHE STRING "build type")

project(ThreadPool VERSION 0.1 LANGUAGES C CXX)

MESSAGE("CMAKE_CURRENT_LIST_LINE:   "	${CMAKE_CURRENT_LIST_LINE})
MESSAGE("CMAKE_SYSTEM_NAME:         "	${CMAKE_SYSTEM_NAME})
MESSAGE("CMAKE_CXX_COMPILER_ID:     "	${CMAKE_CXX_COMPILER_ID})
MESSAGE("CMAKE_C_COMPILER_VERSION:  "	${CMAKE_C_COMPILER_VERSION})
MESSAGE("CMAKE_GENERATOR:           "	${CMAKE_GENERATOR})
MESSAGE("CMAKE_CXX_COMPILER_VERSION:"	${CMAKE_CXX_COMPILER_VERSION})
MESSAGE("PROJECT_SOURCE_DIR:        "	${PROJECT_SOURCE_DIR})
MESSAGE("CMAKE_SYSTEM_PROCESSOR:    "	${CMAKE_SYSTEM_PROCESSOR})
MESSAGE("CMAKE_CURRENT_LIST_LINE:   "	${CMAKE_CURRENT_LIST_LINE})

if (WIN32)
	set(COMMON_DEBUG "/Od /bigobj /MDd /Zi /sdl- /RTC1 /W4 /Zc:__cplusplus /D _DEBUG /std:c++latest")
	set(CMAKE_EXE_LINKER_FLAGS_DEBUG "${CMAKE_EXE_LINKER_FLAGS_DEBUG}")
	#set(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} /subsystem:windows /entry:mainCRTStartup")
	
	add_definitions("-D_CRT_SECURT_NO_WARNINGS")
	
	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINGKER_FLAGS} /NODEFAULTLIB:LIBCMT.LIB")
	set(COMMON_RELEASE "/O2 /MD /Zc:__cplusplus /D NDEBUG /std:c++latest")
	set(COMMON_LINK_LIB ws2_32)
	set(CMAKE_CXX_FLAGS_DEBUG "${COMMON_DEBUG}")
	set(CMAKE_CXX_FLAGS_RELEASE "${COMMON_RELEASE}")
	set(CMAKE_C_FLAGS_DEBUG "${COMMON_DEBUG}")
	set(CMAKE_C_FLAGS_RELEASE "${COMMON_RELEASE}")
	
	set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/out/${CMAKE_SYSTEM_NAME}/Lib)
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/out/${CMAKE_SYSTEM_NAME}/Lib)
	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/out/${CMAKE_SYSTEM_NAME}/Bin)
else ()

endif ()

file(GLOB PROJECT_HEADERS LIST_DIRECTORIES false *.h)
file(GLOB PROJECT_SOURCES LIST_DIRECTORIES false *.cpp)
source_group("Header Files" FILES ${PROJECT_HEADERS})
source_group("Source Files" FILES ${PROJECT_SOURCES})

add_executable(ThreadPool ${PROJECT_HEADERS} ${PROJECT_SOURCES})
